--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^12.23.22",
     "gh-pages": "^6.3.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
